fixed horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html,body,head {
+margin: 0;
+padding: 0;
+width: 100vw;
+height: 100vw;
+max-width: 100vw;
+
+
+
+}
+*{
+    -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+    display: none;
+}
